# telegram-bot-template

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  compose.override.yaml  compose.yaml  config.toml  logging_config.yaml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
src/telegram_bot_template/application/common/: command.py  exceptions.py  id_provider.py  query.py  uow.py
src/telegram_bot_template/application/common/db/: user.py
src/telegram_bot_template/application/user/: exceptions.py
src/telegram_bot_template/application/user/commands/: assign_admin_role.py  assign_administrator_role.py  create_user.py
src/telegram_bot_template/application/user/queries/: get_all_telegram_ids.py  get_current_user.py  get_user_id_by_telegram_id.py
src/telegram_bot_template/domain/common/value_objects/: base.py
src/telegram_bot_template/domain/entities/: user.py
src/telegram_bot_template/domain/enums/: user.py
src/telegram_bot_template/domain/exceptions/: access.py
src/telegram_bot_template/domain/factories/: user.py
src/telegram_bot_template/domain/services/: access.py  user.py
src/telegram_bot_template/domain/value_objects/: telegram_id.py  user_id.py
src/telegram_bot_template/entry_points/: bot.py  config.py  config_loader.py  di.py
src/telegram_bot_template/infrastructure/auth/: id_provider.py
src/telegram_bot_template/infrastructure/db/: config.py  provider.py  uow.py
src/telegram_bot_template/infrastructure/db/gateways/: user.py
src/telegram_bot_template/infrastructure/db/gateways/converters/: user.py
src/telegram_bot_template/infrastructure/db/migrations/: env.py
src/telegram_bot_template/infrastructure/db/migrations/versions/: 7a99988058f2_initial_migration.py
src/telegram_bot_template/infrastructure/db/models/: __init__.py  base.py  user.py
src/telegram_bot_template/presentation/telegram/: config.py  provider.py
src/telegram_bot_template/presentation/telegram/broadcast/: router.py
src/telegram_bot_template/presentation/telegram/locales/en/: broadcast.ftl  common.ftl  start.ftl
src/telegram_bot_template/presentation/telegram/start/: dialog.py  router.py  state.py
src/telegram_bot_template/presentation/telegram/widgets/: i18n.py
tests/integration/application/: conftest.py
tests/integration/application/user/commands/: test_assign_admin_role.py  test_create_user.py
tests/integration/application/user/queries/: test_get_all_telegram_ids.py  test_get_current_user.py  test_get_user_id_by_telegram_id.py
tests/unit/domain/entities/: test_user_entity.py
tests/unit/domain/factories/: test_user_factory.py
tests/unit/domain/services/: test_access_service.py  test_user_service.py
tests/unit/infrastructure/db/: test_uow.py
tests/unit/infrastructure/db/gateways/: test_user_gateway.py
